--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -1,5 +1,17 @@
 {% extends "blog/base.html" %}
 
+{% block title %}
+    {{ block.super }}
+    | Index
+{% endblock title %}
+
 {% block content %}
-Hello World
+    <h2>Recent Posts</h2>
+    <ul class="list-group">
+        {% for post in posts %}
+         <li class="list-group-item">
+          {{ post.title}}
+         </li>
+         {% endfor %}
+    </ul>
 {% endblock %}
