--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -6,8 +6,12 @@
 {% endblock title %}
 
 {% block content %}
-    <h2>Blog Post</h2>
+    <h2>{{ post.title }}
+    <small>
+        published {{post.published_date|timesince}} ago
+    </small>
+    </h2>
     <pre>
-    {{ post.content }}
+{{ post.content }}
     </pre>
 {% endblock %}
